--- a/app/views/admin/avatars/show.html.haml
+++ b/app/views/admin/avatars/show.html.haml
@@ -6,16 +6,10 @@
 
   - show_for @avatar do |a| 
     = a.attribute :id
-        = a.attribute :user
-        = a.attribute :shirt
-        = a.attribute :short
-        = a.attribute :snicker
-        = a.attribute :shirt_rotation
-        = a.attribute :short_rotation
-        = a.attribute :snicker_rotation
-        = a.attribute :shirt_scale
-        = a.attribute :short_scale
-        = a.attribute :snicker_scale
+    = a.attribute :account
+    = a.attribute :shirt
+    = a.attribute :short
+    = a.attribute :snicker
     
 
   .bottom_menu
