--- a/app/views/admin/matches/_form.html.haml
+++ b/app/views/admin/matches/_form.html.haml
@@ -6,8 +6,8 @@
     = form.input :stadium, :label => "Estadio"
     = form.input :local, :label => "Equipo Local"
     = form.input :visitor, :label => "Equipo Visitante"
-    = form.input :first_team_goals, :label => "Goles Equipo Local"
-    = form.input :second_team_goals, :label => "Goles equipo visitante"
+    = form.input :first_team_goals, :label => "Goles Local"
+    = form.input :second_team_goals, :label => "Goles Visitante"
     = form.input :group, :label => "Grupo"
     = form.input :picture, :as => "file", :label => "La Foto"
     
