--- a/app/views/admin/matches/edit.html.haml
+++ b/app/views/admin/matches/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando match"
+- @title = "Editando partido"
 
 #admin
-  %h1= "Editando match"
+  %h1= "Editando partido"
 
   = render :partial => 'form'
 
