--- a/app/views/admin/matches/index.html.haml
+++ b/app/views/admin/matches/index.html.haml
@@ -4,7 +4,7 @@
   %h1= "Administrando Partidos"
 
   #admin_menu
-    = link_to "Nuevo match", new_admin_match_path
+    = link_to "Nuevo partido", new_admin_match_path
 
   %table{:id=>"matches_table"}
     %thead
