--- a/app/views/admin/comments/edit.html.haml
+++ b/app/views/admin/comments/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando comment"
+- @title = "Editando comentario"
 
 #admin
-  %h1= "Editando comment"
+  %h1= "Editando comentario"
 
   = render :partial => 'form'
 
