--- a/app/views/admin/comments/new.html.haml
+++ b/app/views/admin/comments/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo comment"
+- @title = "Nuevo comentario"
 
 #admin
-  %h1= "Nuevo comment"
+  %h1= "Nuevo comentario"
 
   = render :partial => 'form'
 
