--- a/app/views/admin/comments/show.html.haml
+++ b/app/views/admin/comments/show.html.haml
@@ -1,4 +1,4 @@
-- @title = "Viendo comment"
+- @title = "Viendo comentario"
 
 #admin
 
@@ -6,17 +6,17 @@
 
   - show_for @comment do |a| 
     = a.attribute :id
-        = a.attribute :post
-        = a.attribute :title
-        = a.attribute :content
-        = a.attribute :email
-        = a.attribute :user
-        = a.attribute :website
-        = a.attribute :commentable
-        = a.attribute :commentable_type
+    = a.attribute :post
+    = a.attribute :title
+    = a.attribute :content
+    = a.attribute :email
+    = a.attribute :user
+    = a.attribute :website
+    = a.attribute :commentable
+    = a.attribute :commentable_type
     
 
   .bottom_menu
     = link_to "Ver todos", admin_comments_path
-    = link_to "Editar comment",  edit_admin_comment_path(comment)
+    = link_to "Editar comentario",  edit_admin_comment_path(comment)
     = link_to "Crear otro", new_admin_comment_path
