--- a/app/views/admin/countries/index.html.haml
+++ b/app/views/admin/countries/index.html.haml
@@ -1,10 +1,10 @@
-- @title = "Administración Countries "
+- @title = "Administración Países "
 
 #admin.index
-  %h1= "Administrando Countries"
+  %h1= "Administrando países"
 
   #admin_menu
-    = link_to "Nuevo country", new_admin_country_path
+    = link_to "Nuevo país", new_admin_country_path
 
   %table{:id=>"countries_table"}
     %thead
