--- a/app/views/admin/countries/new.html.haml
+++ b/app/views/admin/countries/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo country"
+- @title = "Nuevo país"
 
 #admin
-  %h1= "Nuevo country"
+  %h1= "Nuevo país"
 
   = render :partial => 'form'
 
