--- a/app/views/admin/countries/show.html.haml
+++ b/app/views/admin/countries/show.html.haml
@@ -1,4 +1,4 @@
-- @title = "Viendo country"
+- @title = "Viendo país"
 
 #admin
 
@@ -6,10 +6,10 @@
 
   - show_for @country do |a| 
     = a.attribute :id
-        = a.attribute :name
+    = a.attribute :name
     
 
   .bottom_menu
     = link_to "Ver todos", admin_countries_path
-    = link_to "Editar country",  edit_admin_country_path(country)
+    = link_to "Editar país",  edit_admin_country_path(country)
     = link_to "Crear otro", new_admin_country_path
