--- a/app/views/admin/predictions/new.html.haml
+++ b/app/views/admin/predictions/new.html.haml
@@ -1,9 +1,9 @@
-- @title = "Nuevo prediction"
+- @title = "Nuevo predicción"
 
 #admin
-  %h1= "Nuevo prediction"
+  %h1= "Nuevo predicción"
 
   = render :partial => 'form'
 
   .bottom_menu
-    %p= link_to "Ver todos", admin_predictions_path
+    %p= link_to "Ver todos", admin_prediction_path
