--- a/app/views/admin/shirts/_form.html.haml
+++ b/app/views/admin/shirts/_form.html.haml
@@ -1,7 +1,6 @@
 - semantic_form_for ["admin",@shirt] do |form|
   - form.inputs do
-    = form.input :id
-    = form.input :name
-    = form.input :picture    
+    = form.input :name, :label => "Nombre"
+    = form.input :picture, :label => "Imagen"
   - form.buttons do
     = form.commit_button 'Grabar',:button_html => { :class => "submit" }
