--- a/app/views/admin/snickers/new.html.haml
+++ b/app/views/admin/snickers/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo snicker"
+- @title = "Nueva zapatilla"
 
 #admin
-  %h1= "Nuevo snicker"
+  %h1= "Nueva zapatilla"
 
   = render :partial => 'form'
 
