--- a/app/views/admin/stadia/index.html.haml
+++ b/app/views/admin/stadia/index.html.haml
@@ -1,19 +1,19 @@
-- @title = "Administración Stadia "
+- @title = "Administración Estadios "
 
 #admin.index
-  %h1= "Administrando Stadia"
+  %h1= "Administrando Estadios"
 
   #admin_menu
-    = link_to "Nuevo stadium", new_admin_stadium_path
+    = link_to "Nuevo estadio", new_admin_stadium_path
 
   %table{:id=>"stadia_table"}
     %thead
       %tr
         %td Id
-        %td Name
-        %td City
+        %td Nombre
+        %td Ciudad
         %td Bio
-        %td Country
+        %td País
         %td
         %td
     %tbody
@@ -22,7 +22,7 @@
         %td= stadium.id
         %td= stadium.name
         %td= stadium.city
-        %td= truncate(strip_tags(stadium.bio),50)
+        %td= summary stadium.bio
         %td= stadium.country.name
         %td= link_to 'Editar', edit_admin_stadium_path(stadium)
         %td= link_to 'Eliminar', ["admin",stadium], :confirm => '¿Estas seguro? Se borraran todos los datos relacionados', :method => :delete
