--- a/app/views/admin/teams/_form.html.haml
+++ b/app/views/admin/teams/_form.html.haml
@@ -1,11 +1,9 @@
 - semantic_form_for ["admin",@team] do |form|
   - form.inputs do
-    = form.input :id
-    = form.input :name
-    = form.input :country, :as => :select
+    = form.input :name, :label => "Nombre"
+    = form.input :country, :as => :select, :label => "País"
     = form.input :bio, :input_html => {:class => "tinymce"}
-    = form.input :country
-    = form.input :flag  
-    = form.input :picture  
+    = form.input :flag, :label => "Bandera"
+    = form.input :picture, :label => "Imagen"
   - form.buttons do
     = form.commit_button 'Grabar',:button_html => { :class => "submit" }
