--- a/app/views/admin/teams/index.html.haml
+++ b/app/views/admin/teams/index.html.haml
@@ -1,7 +1,7 @@
-- @title = "Administración Teams "
+- @title = "Administración Equipos "
 
 #admin.index
-  %h1= "Administrando Teams"
+  %h1= "Administrando Equipos"
 
   #admin_menu
     = link_to "Nuevo #{I18n.t 'activerecord.models.team'}", new_admin_team_path
@@ -10,9 +10,9 @@
     %thead
       %tr
         %td Id
-        %td Name
+        %td Nombre
         %td Bio
-        %td Country
+        %td Pais
         %td
         %td
     %tbody
