--- a/app/views/admin/teams/new.html.haml
+++ b/app/views/admin/teams/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo team"
+- @title = "Nuevo equipo"
 
 #admin
-  %h1= "Nuevo team"
+  %h1= "Nuevo equipo"
 
   = render :partial => 'form'
 
