--- a/app/views/admin/groups/index.html.haml
+++ b/app/views/admin/groups/index.html.haml
@@ -1,10 +1,10 @@
-- @title = "Administración Groups "
+- @title = "Administración grupos "
 
 #admin.index
-  %h1= "Administrando Groups"
+  %h1= "Administrando grupos"
 
   #admin_menu
-    = link_to "Nuevo group", new_admin_group_path
+    = link_to "Nuevo grupo", new_admin_group_path
 
   %table{:id=>"groups_table"}
     %thead
