--- a/app/views/admin/groups/new.html.haml
+++ b/app/views/admin/groups/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo group"
+- @title = "Nuevo grupo"
 
 #admin
-  %h1= "Nuevo group"
+  %h1= "Nuevo grupo"
 
   = render :partial => 'form'
 
