--- a/app/views/admin/snickers/edit.html.haml
+++ b/app/views/admin/snickers/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando snicker"
+- @title = "Editando zapatilla"
 
 #admin
-  %h1= "Editando snicker"
+  %h1= "Editando zapatilla"
 
   = render :partial => 'form'
 
