--- a/app/views/admin/stadia/new.html.haml
+++ b/app/views/admin/stadia/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo stadium"
+- @title = "Nuevo estadio"
 
 #admin
-  %h1= "Nuevo stadium"
+  %h1= "Nuevo estadio"
 
   = render :partial => 'form'
 
