--- a/app/views/admin/teams/edit.html.haml
+++ b/app/views/admin/teams/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando team"
+- @title = "Editando equipo"
 
 #admin
-  %h1= "Editando team"
+  %h1= "Editando equipo"
 
   = render :partial => 'form'
 
