--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,14 +32,16 @@
               - else
                 = link_to "entrar", new_account_registration_path
           #login
-            - if account_signed_in
-              = link_to current_account.email, profile_path(current_account.id)
+            - if account_signed_in?
+              = link_to current_account.email, profile_path(current_account.id), :class=>"button"
+              = link_to "salir", destroy_account_session_path, :class=>"button"
+              
             - else
               = link_to "iniciar sesión", new_account_session_path, {:id=>"new_session", :class=>"button log-in"}
               = link_to "registrarse", new_registration_path("account"), {:id=>"register_new_user", :class=>"button register"}
       /[if IE] 
         #the-banner
-      = yield :main_banner
+      = #yield :main_banner
       #banner-cont
         .prev.arrow
         .next.arrow
@@ -52,20 +54,25 @@
       /[if IE] 
         :erb
           </div>
-      = yield
       
-      #footer
-        .wrapper
-      /[if IE] 
-        :erb
-          </div>
-      /[if IE 6] 
-        :erb
-          </div><script src="/javascripts/DD_belatedPNG_0.0.8a.js" type="text/javascript"></script><script src="javascripts/pngfix.js" type="text/javascript"></script>
-      /[if IE 7]
-        :erb
-          </div>
-      /[if gte IE 8]
-        :erb
-          </div>
+      #container
+        #city
+      	.wrapper	
+      	  #content
+      	    = yield
+      
+        #footer
+          .wrapper
+        /[if IE] 
+          :erb
+            </div>
+        /[if IE 6] 
+          :erb
+            </div><script src="/javascripts/DD_belatedPNG_0.0.8a.js" type="text/javascript"></script><script src="javascripts/pngfix.js" type="text/javascript"></script>
+        /[if IE 7]
+          :erb
+            </div>
+        /[if gte IE 8]
+          :erb
+            </div>
       = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','application'
