--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -61,6 +61,9 @@
           #content
             = yield
       
+          #sidebar
+            = yield :sidebar
+          .clear
         #footer
           .wrapper
         /[if IE] 
