--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
             %li.selected.first= link_to "inicio", root_path
             %li= link_to "crea tu avatar", avatar_path
             %li= link_to "campeonatos", matches_path
-            %li= link_to "predicciones", predictions_path
+            %li= link_to "pronósticos", predictions_path
             %li.last
               - if account_signed_in?
                 = link_to "mi perfil", profile_path(current_account.id)
