Updated text on menu

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-- @title = "FaniToons ::  tu pasión en la red"
+- @title = "Patatoon ::  tu pasión en la red"
 - @body_class = "home"
 = display_flashes
 
