--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,10 +1,10 @@
-- @title = "Patatoon ::  tu pasión en la red"
+- @title = "Patatoon ::  exprésate a tu manera"
 - @body_class = "home"
 = display_flashes
 
 
 #nexts-games
-  %h2 proximos partidos
+  %h2 próximos partidos
   #counter-cont
     #vs
       .one.flag.medium.rsa rsa
@@ -13,7 +13,7 @@
     .counter
       .day
         %span 6
-        dias
+        días
       .hour
         %span 15
         horas
@@ -28,69 +28,69 @@
       %a{:href => "#"}
         .flag.ury.small uru
         .flag.arg.small usa
-        %p 5 dias
+        %p 5 días
     %li
       %a{:href => "#"}
         .flag.ury.small uru
         .flag.arg.small usa
-        %p 5 dias
+        %p 5 días
     %li.last
       %a{:href => "#"}
         .flag.ury.small uru
         .flag.arg.small usa
-        %p 5 dias
+        %p 5 días
     %li
       %a{:href => "#"}
         .flag.ury.small uru
         .flag.arg.small usa
-        %p 5 dias
+        %p 5 días
     %li
       %a{:href => "#"}
         .flag.ury.small uru
         .flag.arg.small usa
-        %p 5 dias
+        %p 5 días
     %li.last
       %a{:href => "#"}
         .flag.ury.small uru
         .flag.arg.small usa
-        %p 5 dias
+        %p 5 días
   .clear
 
 #most-predicted
-  %h3 los mas pronosticados
+  %h3 los más pronosticados
   .container
     %ul
       %li
         %a{:href => "#"}
           .flag.ury.small uru
           .flag.arg.small usa
-          %p 20 pronostico
+          %p 20 pronósticos
       %li
         %a{:href => "#"}
           .flag.ury.small uru
           .flag.arg.small usa
-          %p 20 pronostico
+          %p 20 pronóstico
       %li
         %a{:href => "#"}
           .flag.ury.small uru
           .flag.arg.small usa
-          %p 20 pronostico
+          %p 20 pronóstico
       %li.last
         %a{:href => "#"}
           .flag.ury.small uru
           .flag.arg.small usa
-          %p 20 pronostico
+          %p 20 pronóstico
     .clear
   .nav
     %a.prev.arrow{:href => "#"}
     %a.next.arrow{:href => "#"}
-    %a.predict.button{:href => "#"} Deja tu pronostico
+    %a.predict.button{:href => "#"} Deja tu pronóstico
     .clear
 
 
 
 #last-predicted
-  %h3 ultimos pronosticos
+  %h3 últimos pronósticos
   %ul
     %li.odd
       .meta
@@ -217,19 +217,19 @@
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
         %h4 alvaro pereyra
-        %p pronostico
+        %p 20 pronósticos
         %p 18 aciertos
         %p.title Lord del Futbol
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
         %h4 alvaro pereyra
-        %p pronostico
+        %p 20 pronósticos
         %p 18 aciertos
         %p.title lord del futbol
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
         %h4 alvaro pereyra
-        %p pronostico
+        %p 20 pronósticos
         %p 18 aciertos
         %p.title lord del futbol
   #punteros
