--- a/app/views/admin/teams/_form.html.haml
+++ b/app/views/admin/teams/_form.html.haml
@@ -1,6 +1,7 @@
 - semantic_form_for ["admin",@team] do |form|
   - form.inputs do
     = form.input :name, :label => "Nombre"
+    = form.input :short_name, :label => "Abreviación"
     = form.input :country, :as => :select, :label => "País"
     = form.input :bio, :input_html => {:class => "tinymce"}
     = form.input :flag, :label => "Bandera"
